--- a/client/index.css
+++ b/client/index.css
@@ -8,6 +8,7 @@
 body{
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     background-color: black
 }
@@ -60,7 +61,7 @@ body{
     transform-origin: 70% 70%;
 }
 .body_text{
-    border: 2px solid white;
+    border: 2px solid  rgb(95, 95, 222);
     color: white;
     padding: 20px;
 }
@@ -74,7 +75,7 @@ body{
 
     position: absolute;
     top: 300px;
-    left: 170px;
+    left: 140px;
     height: 150px;
     width: 200px;
 }
@@ -94,11 +95,22 @@ body{
   100% { transform: rotate( 0.0deg) }
 }
 .ChatComp{
-    border: 1px solid white;
-    padding: 20px;
+    border: 1px solid  rgb(95, 95, 222);
+    padding: 10px;
     margin-top: 30px;
     height: 300px;
-    width: 35vw;
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.DalleComp{
+    color: white;
+    border: 1px solid  rgb(95, 95, 222);
+    padding: 10px;
+    margin-top: 30px;
+    /* height: 300px; */
+    width: 75vw;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -107,29 +119,72 @@ body{
     color: white;
 
 }
-.input > input{
+.inputDalle > input , .input > input{
     height: 50px;
     width: 350px;
     font-size: 1.25rem;
     padding: 5px;
 }
-.input > button{
-    height: 50px;
-    font-size: 1.25rem;
-    width: 70px;
-    background-color: black;
-    color: rgb(95, 95, 222);
-    border: 2px solid rgb(95, 95, 222);
-    font-weight: bold;
-    transition: all 1s ease;
-}
-.input > button:hover{
-    background-color: rgb(95, 95, 222);
-    color: black;
-    cursor: pointer;
-}
 .response{
     border: 2px solid white;
     height: 200px;
     background-color: white;
+    overflow: auto;
+}
+.response_dalle{
+    display: flex;
+    padding: 20px;
+    background-color: black;
+    justify-content: center;
+    border: 2px solid white;
+    height: 500px;
+    /* background-color: white; */
+}
+.response_dalle>img{
+    background-color: white;
+    border: 1px solid white;
+    height: 450px;
+    width: 700px;
+}
+.response{
+    font-size: 1.25rem;
+}
+.footer{
+    height: 70px;
+    width: 100%;
+    /* border: 1px solid white; */
+    margin-top: 100px;
+    display: flex;
+    gap: 35px;
+    justify-content: center;
+    align-items: center;
+}
+.get_res, .get_dalle{
+    height: 50px;
+    font-size: 1.25rem;
+    width: max-content;
+    background-color: black;
+    color: rgb(95, 95, 222);
+    border: 2px solid rgb(95, 95, 222);
+    font-weight: bold;
+    transition: all 0.3s ease;
+    padding: 0 10px;
+}
+.get_dalle_random{
+    height: 50px;
+    font-size: 1.25rem;
+    width: max-content;
+    background-color: black;
+    color: rgb(95, 95, 222);
+    border: 2px solid rgb(95, 95, 222);
+    font-weight: bold;
+    transition: all 0.3s ease;
+    padding: 0 10px;
+
+}
+
+.get_res:hover,.get_dalle:hover, .get_dalle_random:hover{
+    background-color: rgb(95, 95, 222);
+    color: black;
+    cursor: pointer;
 }
